[tool.poetry]
name = "rl-stock-trading"
version = "0.1.0"
description = "rl stock trading application"
authors = ["KYOOKIM <dev.kyoomin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
